--- a/app/src/main/res/layout/calibrate_beacon_fragment.xml
+++ b/app/src/main/res/layout/calibrate_beacon_fragment.xml
@@ -8,9 +8,11 @@
 
     <TextView
         android:id="@+id/instructionText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="150dp"
+        android:layout_marginEnd="30dp"
         android:gravity="center"
         android:text="@string/calibration_InstructionsText"
         android:textSize="26sp"
