--- a/app/src/main/res/layout/find_beacon_list_item.xml
+++ b/app/src/main/res/layout/find_beacon_list_item.xml
@@ -1,20 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_layout"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/beaconNmaeTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_weight="1" />
+    <Space
+        android:layout_width="5dp"
+        android:layout_height="match_parent" />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/beaconNameTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="18sp"
+                tools:text="BeaconName" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/macAddressTagTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/knownBeaconListItem_MacAddressTag"
+                android:textSize="10sp" />
+
+            <TextView
+                android:id="@+id/macAddressTextViewOutput"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="10sp"
+                tools:text="ff-ff-ff-ff-ff-ff" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/macAddressTagTextView"
+        android:id="@+id/rssiTagTextView"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_weight="1" />
+        android:layout_height="match_parent"
+        android:layout_marginEnd="5dp"
+        android:gravity="center|center_horizontal"
+        android:text="@string/unknownBeaconListItem_RssiTag"
+        tools:text="RSSI:" />
 
+    <TextView
+        android:id="@+id/rssiValueTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center|center_horizontal"
+        android:text="@string/knownBeaconListItem_Delete"
+        tools:text="-999" />
+
+    <Space
+        android:layout_width="20dp"
+        android:layout_height="match_parent" />
 </LinearLayout>
